tests/spec/emit/snapshots/tuple_subject_unit_access_keeps_its_bounds_check.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn units() -> Slice<()> {
    []
  }
  
  fn test(b: bool) -> string {
    match (units()[0], b) {
      (_, true) => "yes",
      _ => "no",
    }
  }
---
package main

func units() []struct{} {
	return []struct{}{}
}

func test(b bool) string {
	_ = units()[0]
	if b == true {
		return "yes"
	}
	return "no"
}
