tests/spec/emit/snapshots/tuple_subject_untested_literal_keeps_its_call.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Box { value: int }
  
  fn source() -> int { 1 }
  
  fn test(b: bool) -> string {
    match (Box { value: source() }, b) {
      (_, true) => "yes",
      _ => "no",
    }
  }
---
package main

type Box struct {
	value int
}

func source() int {
	return 1
}

func test(b bool) string {
	_ = Box{value: source()}
	if b == true {
		return "yes"
	}
	return "no"
}
