tests/spec/emit/snapshots/tuple_subject_with_a_binding_keeps_its_tuple.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn source() -> int { 1 }
  
  fn test(b: bool) -> string {
    match (source(), b) {
      (x, true) => "yes",
      _ => "no",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func source() int {
	return 1
}

func test(b bool) string {
	if lisette.MakeTuple2[int, bool](source(), b).Second == true {
		return "yes"
	}
	return "no"
}
