tests/spec/emit/snapshots/tuple_subject_with_a_guard_keeps_its_tuple.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn bump(n: int) -> bool {
    let mut n = n
    n = n + 1
    true
  }
  
  fn test(start: int, b: int) -> string {
    let mut a = start
    a = a + 1
    match (a, b) {
      (1, _) if bump(a) => "first",
      (2, _) => "second",
      _ => "none",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func bump(n int) bool {
	n_1 := n
	n_1++
	return true
}

func test(start, b int) string {
	a := start
	a++
	subject := lisette.MakeTuple2[int, int](a, b)
	if subject.First == 1 {
		if bump(a) {
			return "first"
		}
	}
	if subject.First == 2 {
		return "second"
	}
	{
		return "none"
	}
}
