tests/spec/emit/snapshots/tuple_subject_with_a_struct_pattern_keeps_its_tuple.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Box {}
  
  fn make_box() -> Box { Box {} }
  
  fn test(b: bool) -> string {
    match (make_box(), b) {
      (Box {}, true) => "yes",
      _ => "no",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Box struct{}

func makeBox() Box {
	return Box{}
}

func test(b bool) string {
	if lisette.MakeTuple2[Box, bool](makeBox(), b).Second == true {
		return "yes"
	}
	return "no"
}
