tests/spec/emit/snapshots/tuple_tail_return_wraps_adapter_for_interface_slot.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  struct Thing {
    v: int,
  }
  
  interface Box<T> {
    fn get() -> T
  }
  
  struct Bar {}
  
  impl Bar {
    fn get(self) -> Option<Ref<Thing>> {
      None
    }
  }
  
  fn make() -> (Box<Option<Ref<Thing>>>, int) {
    (Bar {}, 2)
  }
  
  fn test() {
    let pair = make()
    match pair.0.get() {
      Some(_) => panic("expected None"),
      None => {},
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Thing struct {
	v int
}

type Box[T any] interface {
	get() T
}

type Bar struct{}

func (b Bar) get() *Thing {
	return nil
}

func make_() (Box[lisette.Option[*Thing]], int) {
	return _lisAdapter_Bar_Box_0{inner: Bar{}}, 2
}

func test() {
	pair0, _ := make_()
	if pair0.get().Tag == lisette.OptionSome {
		panic("expected None")
	}
}

type _lisAdapter_Bar_Box_0 struct {
	inner Bar
}

func (a _lisAdapter_Bar_Box_0) get() lisette.Option[*Thing] {
	raw := a.inner.get()
	return lisette.OptionFromNilable[*Thing](raw, raw == nil)
}
