tests/spec/emit/snapshots/tuple_type.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test() {
    (42, "hello")
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	_ = lisette.MakeTuple2[int, string](42, "hello")
}
